# theplanets

./: README.md  data-sources.txt  git-set-identity.sh  install-libs-ubuntu.sh  install-tools-msys.sh  ubuntu-libs.txt
project/: CMakeLists.txt  makearch-sgi  makearch-source  makeinstall-linux  makeinstall-sgi  run-linux.sh  settings.txt
project/Dokumente/: video-script.txt
project/Krater/: mond_bearbeitet.txt
project/Krater/mond_files/: utility.js
project/Resource/: AppInfoBox.r3d  GanymedInfoBox.r3d  Infobox.r3d  Interdialog.r3d  JupiterInfoBox.r3d  KallistoInfoBox.r3d  MerkurInfoBox.r3d  NeptunInfoBox.r3d  SaturnInfoBox.r3d  UranusInfoBox.r3d  VenusInfoBox.r3d  resource0.r3d  resource0.r3d.cpp  strings.r3d
project/Resource/Fonts/: A_BitstreamVeraSans11.tga  A_BitstreamVeraSans12.tga  A_BitstreamVeraSans13.tga  A_BitstreamVeraSans8.tga  A_CourierNew12.tga  A_Sylfaen10.tga  A_Sylfaen13.tga  A_Sylfaen8.tga  A_Verdana11.tga  A_Wingdings10.tga
project/Resource/Fonts2/: verdana_24.rects  verdana_48.rects
project/Resource/Fonts2/verdana36/: A_verdana_36.tga
project/Resource/Label/: Mond_krater2.txt
project/Source/: libfiles.mk  makefile-linux  makefile-linux64  makefile-sgi  makefile-win
project/Source/include/: CDataRect.h  CDatabase2.h  CDatabase3.h  CErrorMessage.h  CFileIO.h  CFilemapping.h  CG3DColor.h  CG3DGlobals.h  CG3DGroup.h  CG3DResChild.h  CG3DResRef.h  CG3DReslistInterface.h  CG3DResource.h  CG3DResourceBox.h  CG3DResourceButton.h  CG3DResourceClass.h  CG3DResourceClipframe.h  CG3DResourceDialog.h  CG3DResourceFont.h  CG3DResourceFrame.h  CG3DResourceGroup.h  CG3DResourceImage.h  CG3DResourceImgRef.h  CG3DResourceKnot.h  CG3DResourceLine.h  CG3DResourceList.h  CG3DResourceOButton.h  CG3DResourceObject.h  CG3DResourceRoot.h  CG3DResourceSlider.h  CG3DResourceString.h  CG3DResourceTableau.h  CG3DResourceTextfield.h  CG3DResourceTooltipp.h  CG3DStatus.h  CGLApplication.h  CGL_BitmapFont.h  CGL_Camera.h  CGL_Circle.h  CGL_Disk.h  (+42 more)
project/Source/include/CGL/: CGL_BitmapFont.h  CGL_Circle.h  CGL_Ellipse.h  CGL_Ellipsoid.h  CGL_EllipsoidPatched.h  CGL_FontTableau.h  CGL_MatObject.h  CGL_Mouse.h  CGL_Object.h  CGL_Patch.h  CGL_Ring.h  CGL_StarField.h  CGL_Texture.h  COpenGL.h
project/Source/include/CSDL/: CSDL_App.h  CSDL_Context.h  CSDL_Theplanets.h
project/Source/include/Graflib/: CDataRect.h  CGraflib.h  CGraphicsJpeg.h  CPixel8.h
project/Source/include/Math/: CMatrix.h  CMatrix.hpp  CMatrixStack.h  CVector2T.h  CVector2T.hpp  CVector3T.h  CVector3T.hpp  CVertexArrays.h  MathDefines.h
project/Source/include/OLD/: CVector3T.hpp
project/Source/include/Reslib/: CG3DColor.h  CG3DGlobals.h  CG3DResChild.h  CG3DResRef.h  CG3DReslistInterface.h  CG3DResourceFrame.h  CG3DResourceGroup.h  CG3DResourceImage.h  CG3DResourceKnot.h  CG3DResourceList.h  CG3DResourceOButton.h  CG3DResourceRoot.h  CG3DResourceSlider.h  CG3DResourceString.h  CG3DResourceTextfield.h  EG3DInterfaceCommand.h  SG3DDrawParams.h
project/Source/include/Shader/: EShaderMode.h  EUniformLocation.h
project/Source/include/ThePlanets/: CGLApplication.h  CGL_Gradnetz.h  CGL_KraterCircle.h  CLabels.h  CMond.h  CPlanet.h  EPlanet.h  NPlanets.h  SLabel.h  SPlanetDesc.h
project/Source/include/Tools/: CDatabase3.h  CErrorMessage.h  CFileIO.h  CHexConv.h  CList.h  CList.hpp  CParser.h  CRandom.h  CRandom.hpp  CRectT.h  CRectT.hpp  CStringTool.h  CStringTool.hpp  GSystemFunctions.h  NStringTool.h  STransformContext.h
project/Source/include/jpeglib/: cderror.h  cdjpeg.h  jchuff.h  jconfig.h  jdct.h  jdhuff.h  jerror.h  jinclude.h  jmemsys.h  jmorecfg.h  jpegint.h  jpeglib.h  jversion.h  transupp.h
project/Source/lib/: CDatabase3.cpp  CErrorMessage.cpp  CFileIO.cpp  CFilemapping.cpp  CG3DResChild.cpp  CG3DReslistInterface.cpp  CG3DResource.cpp  CG3DResourceBox.cpp  CG3DResourceButton.cpp  CG3DResourceClipframe.cpp  CG3DResourceDialog.cpp  CG3DResourceFont.cpp  CG3DResourceGL.cpp  CG3DResourceImage.cpp  CG3DResourceImgRef.cpp  CG3DResourceLine.cpp  CG3DResourceList.cpp  CG3DResourceOButton.cpp  CG3DResourceRoot.cpp  CG3DResourceString.cpp  CG3DResourceTextfield.cpp  CG3DResourceTooltipp.cpp  CGLApplication.cpp  CGL_BitmapFont.cpp  CGL_Camera.cpp  CGL_Circle.cpp  CGL_Disk.cpp  CGL_Ellipsoid.cpp  CGL_FontTableau.cpp  CGL_GLU_Object.cpp  CGL_GLU_Sphere.cpp  CGL_MatObject.cpp  CGL_Object.cpp  CGL_Patch.cpp  CGL_Texture.cpp  CGraflib.cpp  CGraflibJpeg.cpp  CGraflibTga.cpp  CGraphicsJpeg.cpp  CHexConv.cpp  (+9 more)
project/Source/lib/CGL/: CGLApplication.cpp  CGL_BitmapFont.cpp  CGL_Camera.cpp  CGL_Circle.cpp  CGL_Disk.cpp  CGL_Ellipse.cpp  CGL_Ellipsoid.cpp  CGL_EllipsoidPatched.cpp  CGL_FontTableau.cpp  CGL_GLU_Object.cpp  CGL_GLU_Sphere.cpp  CGL_MatObject.cpp  CGL_Object.cpp  CGL_Patch.cpp  CGL_StarField.cpp  CGL_Texture.cpp  COpenGL.cpp  COpenGLAction.cpp  CSdlApp.cpp
project/Source/lib/CSDL/: CSDL_App.cpp
project/Source/lib/Graflib/: CGraflib.cpp  CGraflibJpeg.cpp  CGraflibTga.cpp  CGraphicsJpeg.cpp  CPixel32.cpp
project/Source/lib/Resource/: CG3DReslistInterface.cpp  CG3DResource.cpp  CG3DResourceBox.cpp  CG3DResourceDialog.cpp  CG3DResourceFont.cpp  CG3DResourceGL.cpp  (+7 more)
project/Source/src/: CGLApplication.cpp  CGLApplication.h  CGL_Gradnetz.cpp  CGL_KraterCircle.cpp  CGlutApp.cpp  CGlutApp.h  CLabels.cpp  CMond.cpp  COpenGLAction.cpp  CPlanet.cpp  CSDLtheplanets.h  NPlanets.cpp  SLabel.h  SPlanetDesc.h  Superlib.h  main.cpp  mainSdl.cpp  planets.cpp
project/debian_package_creator/: copy_data_to_package.sh  install_deb_package.sh  make_deb_package.sh
project/distribution/theplanets/: run-win.sh
project/distribution/windows/: nullsoft-installer-script.nsi
project/docs/: umrechnung.html
project/docs/sgi/: readme.txt
project/planeten/: A_sonnehalo.tga  A_uranusring.tga  saturnring.tga  sonnehalo2.tga  uranusring.tga
project/sonne/: noise0.tga  noise11.tga  noise14.tga  noise15.tga  noise16.tga  noise17.tga  noise19.tga  noise21.tga  noise22.tga  noise23.tga  noise24.tga  noise26.tga  noise29.tga  noise30.tga  noise31.tga  noise4.tga  noise5.tga  noise6.tga  noise7.tga  noise8.tga
(+113 files in other folders)
